tests/fail-objfn1.mg
// error: duplicate fns
object main {
  void same() { }
  void same() { }
}
